[package]
name = "stemplate"
version = "0.1.4"
edition = "2021"
authors = ["Chris Dipple <chris@intelligent-net.co.uk>"]
license = "MIT OR Apache-2.0"
description = "Simple/fast templating in Rust with no dependencies"
homepage = "https://github.com/intelligentnet/stemplate"
repository = "https://github.com/intelligentnet/stemplate"
keywords = ["template", "templating"]
categories = ["template-engine"]

[dependencies]
